Updated localization files

--- a/src/main/resources/locale/locale_fi.properties
+++ b/src/main/resources/locale/locale_fi.properties
@@ -1,14 +1,28 @@
 Acrobatics.Combat.Proc=[[GREEN]]**V\u00e4ist\u00f6liike**
 Acrobatics.SkillName=AKROBATIA
 Acrobatics.Skillup=[[YELLOW]]Akrobatian taito nousi {0} tasolla. Kokonaism\u00e4\u00e4r\u00e4 ({1})
+Archery.Skillup=[[YELLOW]]Jousiammuntataito kehittyi {0} tasoa. Kokonaistaso: ({1})
+Axes.Combat.GI.Struck=[[RED]]**OSUNUT SUUREMMALLA VOIMALLA**
+Axes.Skills.SS.Other.On=[[GREEN]]{0}[[DARK_GREEN]] on k\u00e4ytt\u00e4nyt [[RED]] Kallonhalkaisijaa!
 Excavation.SkillName=KAIVANTO
 Fishing.ItemFound=[[GRAY]]Treasure found!
 Fishing.MagicFound=[[GRAY]]You feel a touch of magic with this catch...
+Herbalism.Listener=Yrttitietous:
 Mining.Ability.Ready=[[GREEN]]**VALMISTAUDUT ISKEM\u00c4\u00c4N HAKULLASI**
+Mining.Skills.SuperBreaker.Refresh=[[GREEN]]Sinun [[YELLOW]Superrikkomis [[GREEN]]-taito on uudelleenlatautunut!
 Mining.Skillup=[[YELLOW]]Louhimistaito kasvoi {0} tasolla. Kokonaism\u00e4\u00e4r\u00e4 ({1})
+Mining.Blast.Refresh=[[GREEN]]Sinun [[YELLOW] R\u00e4j\u00e4ht\u00e4v\u00e4 Kaivuu [[GREEN]]-kyky on uudelleenlatautunut!
 Repair.Listener.Anvil=[[DARK_RED]]Olet asettanut alasimen paikalleen, voit korjata ty\u00f6kalusi ja haarniskasi sill\u00e4.
+Repair.Skills.AdeptGold=[[DARK_RED]]Et ole tarpeeksi taitava korjataksesi kultaa.
 Repair.Arcane.Fail=[[RED]]Taikavoima on h\u00e4ipynyt esineest\u00e4 pysyv\u00e4sti.
 Swords.Combat.Bleeding.Stopped=[[GRAY]]Verenvuodatus on [[GREEN]]loppunut[[GRAY]]!
+Swords.Combat.Bleeding=[[GREEN]]**Vihollinen vuotaa verta**
+Swords.Skills.SS.On=[[GREEN]]**SAHALAITAISET ISKUT AKTIVOITU**
+Unarmed.Skills.Berserk.Off=[[RED]]**Berserkki on deaktivoitunut**
+Unarmed.Skills.Berserk.Other.On=[[GREEN]]{0}[[DARK_GREEN]] on k\u00e4ytt\u00e4nyt [[RED]]berserkki\u00e4!
+Woodcutting.Ability.0=Lehtipuhallin
+Woodcutting.Ability.1=Puhaltaa lehti\u00e4 pois
+Woodcutting.SkillName=Puunhakkuu
 Combat.ArrowDeflect=[[WHITE]]**NUOLI TORJUTTU**
 Combat.BeastLore=[[GREEN]]**BEAST LORE**
 Combat.BeastLoreHealth=[[DARK_AQUA]]Health ([[GREEN]]{0}[[DARK_AQUA]]/{1})
@@ -17,13 +31,21 @@ Combat.Gore=[[GREEN]]**PISTO**
 Combat.StruckByGore=[[RED]]**SINUA ON PISTETTY**
 Combat.TargetDazed=Kohde [[DARK_RED]]tyrm\u00e4tty
 Combat.TouchedFuzzy=[[DARK_RED]]T\u00f6kk\u00e4sit P\u00f6rr\u00f6\u00e4. Tunsit huimauksen.
+Commands.AdminChat.Off=Ainoastaan Yll\u00e4pit\u00e4jien keskustelu [[RED]]pois p\u00e4\u00e4lt\u00e4
 Commands.DoesNotExist=[[RED]]Player does not exist in the database!
+Commands.mmoedit=[player] <skill> <newvalue> [[RED]] - Muokkaa kohdetta
 Commands.NoConsole=This command does not support console usage.
+Commands.Party.Kick=[[RED]]Sinut on potkittu ryhm\u00e4st\u00e4 {0}!
+Commands.PowerLevel=[[DARK_RED]]Voimataso: [[GREEN]]{0}
 Party.Forbidden=[mcMMO] Parties not permitted on this world (See Permissions)
 Party.Locked=[[RED]]Party is locked, only party leader may invite.
 Party.NotInYourParty=[[DARK_RED]]{0} is not in your party
 Party.Password.Set=[[GREEN]]Party password set to {0}
 Party.Unlocked=[[GRAY]]Party is unlocked
+Commands.XPGain.Excavation=Kaivaminen ja aarteidenl\u00f6yt\u00e4minen
+Commands.XPGain.Herbalism=Yrttien sadonkorjuu
+Commands.XPGain.Mining=Kiven ja malmin kaivaminen
+Commands.XPGain.Taming=El\u00e4inten kesytt\u00e4minen tai taisteleminen susiesi kanssa.
 Commands.xplock.locked=[[GOLD]]Your XP BAR is now locked to {0}!
 Commands.xplock.unlocked=[[GOLD]]Your XP BAR is now [[GREEN]]UNLOCKED[[GOLD]]!
 Commands.xprate.over=[[RED]]mcMMO XP Rate Event is OVER!!
@@ -34,5 +56,7 @@ Guides.Mining=[[DARK_AQUA]]About Mining:\n[[YELLOW]]Mining consists of mining st
 Inspect.OfflineStats=mcMMO Stats for Offline Player [[YELLOW]]{0}
 Inspect.Stats=[[GREEN]]mcMMO Stats for [[YELLOW]]{0}
 Inspect.TooFar=[[RED]]You are too far away to inspect that player!
+Skills.Disarmed=[[DARK_RED]]Sinut on riisuttu aseista!
 Skills.TooTired=[[RED]]You are too tired to use that ability again.
 Stats.Header.Combat=[[GOLD]]-=TAISTELUTAIDOT=-
+Stats.Header.Gathering=[[GOLD]]-=Resurssinkeruutaidot=-
