--- a/src/main/resources/locale/locale_hu_HU.properties
+++ b/src/main/resources/locale/locale_hu_HU.properties
@@ -1,39 +1,150 @@
 Acrobatics.Combat.Proc=[[GREEN]]**Elker\u00fclve**
+Acrobatics.Listener=Akrobatika:
 Acrobatics.SkillName=AKROBATIKA
 Acrobatics.Skillup=[[YELLOW]]Akrobatika fejl\u0151d\u00f6tt {0} szinttel. \u00d6sszesen: ({1})
+Archery.Listener=\u00cdj\u00e1szat:
+Archery.SkillName=\u00cdJ\u00c1SZAT
 Archery.Skillup=[[YELLOW]]\u00cdj\u00e1szat fejl\u0151d\u00f6tt {0} szinttel. \u00d6sszesen: ({1})
+Axes.Ability.Bonus.0=Mesteri balta 
+Axes.Ability.Lower=[[GRAY]]**LETETTED A BALT\u00c1DAT**
+Axes.Ability.Ready=[[GREEN]]**ELK\u00c9SZ\u00cdTETTED BALT\u00c1DAT**
 Axes.Combat.GI.Struck=[[RED]]**HATALMAS EREJ\u0170 \u00dcT\u00c9S**
+Axes.Effect.3=Dupla sebz\u00e9s
+Axes.Effect.4=Mesteri balta 
+Axes.Listener=Balt\u00e1k:
+Axes.SkillName=BALT\u00c1K
+Axes.Skills.SS.On=[[GREEN]]**Koponya T\u00f6r\u0151 AKTIV\u00c1LVA**
 Axes.Skills.SS.Other.On=[[GREEN]]{0}[[DARK_GREEN]] haszn\u00e1lta a [[RED]]Koponya T\u00f6r\u0151t!
+Excavation.Ability.Lower=[[GRAY]]**LETETTED AZ \u00c1S\u00d3DAT**
+Excavation.Ability.Ready=[[GREEN]]**EL\u0150VETTED AZ \u00c1S\u00d3DAT**
+Excavation.Listener=\u00c1s\u00e1s:
 Excavation.SkillName=\u00c1S\u00c1S
+Excavation.Skillup=[[YELLOW]]\u00c1s\u00e1s fejl\u0151d\u00f6tt {0} szinttel. \u00d6sszesen: ({1})
+Fishing.Effect.10=J\u00e9g Horg\u00e1szat
+Fishing.ItemFound=[[GRAY]]Kincs megtal\u00e1lva!
+Fishing.Listener=Horg\u00e1szat:
+Fishing.SkillName=HORG\u00c1SZAT
+Herbalism.Ability.Lower=[[GRAY]]**LETETTED A KAP\u00c1DAT**
+Herbalism.Ability.Ready=[[GREEN]]**EL\u0150K\u00c9SZ\u00cdTETTED A KAP\u00c1DAT**
 Herbalism.Listener=Gy\u00f3gyn\u00f6v\u00e9nytan:
+Herbalism.SkillName=GY\u00d3GYN\u00d6V\u00c9NYTAN
+Herbalism.Skillup=[[YELLOW]]Gy\u00f3gyn\u00f6v\u00e9nytan fejl\u0151d\u00f6tt {0} szinttel. \u00d6sszesen: ({1})
+Mining.Ability.Lower=[[GRAY]]**LETETTED A CS\u00c1K\u00c1NYOD**
 Mining.Ability.Ready=[[GREEN]]**CS\u00c1K\u00c1NYOD K\u00c9SZEN \u00c1LL**
+Mining.Listener=B\u00e1ny\u00e1sz\u00e1s:
+Mining.SkillName=B\u00c1NY\u00c1SZ\u00c1S
 Mining.Skills.SuperBreaker.Refresh=[[GREEN]]A [[YELLOW]] Szuper Z\u00faz\u00f3 [[GREEN]]k\u00e9pess\u00e9ged \u00fajra haszn\u00e1lhat\u00f3!
 Mining.Skillup=[[YELLOW]]B\u00e1ny\u00e1szat fejl\u0151d\u00f6tt {0} szinttel. \u00d6sszesen: ({1})
 Mining.Blast.Refresh=[[GREEN]]A [[YELLOW]]Robban\u00f3 B\u00e1ny\u00e1szat [[GREEN]]k\u00e9pess\u00e9ged \u00fajra el\u00e9rhet\u0151!
+Repair.AnvilPlaced.Spout1=[mcMMO] \u00dcll\u0151 lerakva
+Repair.AnvilPlaced.Spout2=Jobb klikkel jav\u00edtod!
+Repair.Effect.0=Jav\u00edt\u00e1s
+Repair.Effect.1=Eszk\u00f6z\u00f6k \u00e9s felszerel\u00e9sek jav\u00edt\u00e1sa
+Repair.Effect.11= Arany eszk\u00f6z\u00f6k \u00e9s felszerel\u00e9sek jav\u00edt\u00e1sa
+Repair.Effect.13= Vas eszk\u00f6z\u00f6k \u00e9s felszerel\u00e9sek jav\u00edt\u00e1sa
+Repair.Effect.15=K\u0151 eszk\u00f6z\u00f6k jav\u00edt\u00e1sa
+Repair.Effect.2=Jav\u00edt\u00f3 mester
+Repair.Effect.4=Szuper jav\u00edt\u00e1s
+Repair.Effect.7= Gy\u00e9m\u00e1nt eszk\u00f6z\u00f6k \u00e9s felszerel\u00e9sek jav\u00edt\u00e1sa
+Repair.Effect.9=M\u00e1gikus t\u00e1rgyak megjav\u00edt\u00e1sa
+Repair.Listener=Jav\u00edt\u00e1s:
+Repair.SkillName=JAV\u00cdT\u00c1S
+Repair.Skills.AdeptDiamond=[[DARK_RED]]Nem vagy el\u00e9g k\u00e9pzett ahhoz, hogy gy\u00e9m\u00e1nt t\u00e1rgyakat jav\u00edts.
 Repair.Skills.AdeptGold=[[DARK_RED]]Nem vagy el\u00e9g k\u00e9pzett ahhoz, hogy arany t\u00e1rgyakat jav\u00edts.
+Repair.Skills.AdeptIron=[[DARK_RED]]Nem vagy el\u00e9g k\u00e9pzett ahhoz, hogy vas t\u00e1rgyakat jav\u00edts.
+Repair.Skills.AdeptStone=[[DARK_RED]]Nem vagy el\u00e9g k\u00e9pzett ahhoz, hogy arany t\u00e1rgyakat jav\u00edts.
+Repair.Skills.StackedItems=[[DARK_RED]]Nem tudsz jav\u00edtani st\u00f3colt t\u00e1rgyakat
+Repair.Skillup=[[YELLOW]]Jav\u00edt\u00e1s fejl\u0151d\u00f6tt {0} szinttel. \u00d6sszesen: ({1})
+Repair.Pretty.Name=Jav\u00edt\u00e1s
 Repair.Arcane.Fail=[[RED]]A t\u00e1rgyon l\u00e9v\u0151 var\u00e1zslat szertefoszlott.
+Swords.Ability.Lower=[[GRAY]]**ELTETTED A KARDOD**
+Swords.Ability.Ready=[[GREEN]]**A KARDOD K\u00c9SZEN \u00c1LL**
+Swords.Combat.Bleeding.Started=[[DARK_RED]] V\u00e9rzel!
 Swords.Combat.Bleeding.Stopped=[[GRAY]]A v\u00e9rz\u00e9s [[GREEN]]elm\u00falt[[GRAY]]!
 Swords.Combat.Bleeding=[[GREEN]]**ELLENS\u00c9G V\u00c9RZIK**
+Swords.Listener=Kardok:
+Swords.SkillName=KARDOK
 Swords.Skills.SS.On=[[GREEN]]**F\u0170R\u00c9SZES CSAP\u00c1S AKTIV\u00c1LVA**
+Swords.Skillup=[[YELLOW]]Harc fejl\u0151d\u00f6tt {0} szinttel. \u00d6sszesen: ({1})
+Taming.Listener.Wolf=[[DARK_GRAY]]A farkasod visszat\u00e9rt hozz\u00e1d...
+Taming.Listener=Szelid\u00edt\u00e9s:
+Taming.SkillName=SZELID\u00cdT\u00c9S
+Taming.Skillup=[[YELLOW]]Szelid\u00edt\u00e9s fejl\u0151d\u00f6tt {0} szinttel. \u00d6sszesen: ({1})
+Unarmed.Ability.Lower=[[GRAY]]**LETETTED KEZEIDET**
+Unarmed.Ability.Ready=[[GREEN]]**EL\u0150K\u00c9SZ\u00cdTETTED KEZEIDET**
+Unarmed.Listener=Fegyvertelen:
+Unarmed.SkillName=FEGYVERTELEN
 Unarmed.Skills.Berserk.Off=[[RED]]**Tombol\u00e1sod befejez\u0151d\u00f6tt**
 Unarmed.Skills.Berserk.Other.On=[[GREEN]]{0}[[DARK_GREEN]] haszn\u00e1lta a [[RED]]Tombol\u00e1st!
+Unarmed.Skillup=[[YELLOW]]Fegyvertelen fejl\u0151d\u00f6tt {0} szinttel. \u00d6sszesen: ({1})
 Woodcutting.Ability.0=Lev\u00e9l F\u00faj\u00f3
 Woodcutting.Ability.1=Elf\u00fajja a leveleket.
+Woodcutting.Listener=Fav\u00e1g\u00e1s:
 Woodcutting.SkillName=FAV\u00c1G\u00c1S
+Woodcutting.Skills.TreeFellerThreshold=[[RED]]Ez a fa t\u00fal nagy!
+Woodcutting.Skillup=[[YELLOW]]Fav\u00e1g\u00e1s fejl\u0151d\u00f6tt {0} szinttel. \u00d6sszesen: ({1})
 Ability.Generic.Template=[[RED]]{0}: [[YELLOW]]{1}
+Combat.BeastLoreHealth=[[DARK_AQUA]]\u00c9let ([[GREEN]]{0}[[DARK_AQUA]]/{1})
 Combat.TouchedFuzzy=[[DARK_RED]]Bolyhosat \u00e9rintettem. Elsz\u00e9d\u00fcltem.
 Commands.AdminChat.Off=Admin Chat [[RED]]kikapcsolva
+Commands.AdminChat.On=Admin Chat [[RED]]bekapcsolva
+Commands.AdminToggle=[[RED]]- Admin chat \u00e1tv\u00e1ltva
+Commands.Disabled=[[RED]]Ez a parancs jelenleg le van tiltva.
+Commands.DoesNotExist=[[RED]]Ilyen nev\u0171 j\u00e1t\u00e9kos nincs az adatb\u00e1zisban!
+Commands.GodMode.Disabled=[[YELLOW]]mcMMO Istenm\u00f3d letiltva
+Commands.GodMode.Forbidden=[mcMMO] Istenm\u00f3d nem lehets\u00e9ges ebben a vil\u00e1gban! (N\u00e9zd meg a jogokat)
+Commands.Invite.Accepted=[[GREEN]]Megh\u00edv\u00e1st sikeresen elfogadtad {0} party-ra!
+Commands.Invite.Success=[[GREEN]]Megh\u00edv\u00f3 sikeresen elk\u00fcldve.
+Commands.mcc.Header=[[RED]]---[][[YELLOW]]mcMMO Parancsok[[RED]][]---
 Commands.mmoedit=[player] <skill> <newvalue> [[RED]] - M\u00f3dos\u00edtva
+Commands.Other=[[GREEN]]--Egy\u00e9b Parancsok--
+Commands.Party.Chat.Off=Party Chat [[RED]]kikapcsolva
+Commands.Party.Chat.On=Party Chat [[GREEN]]bekapcsolva
+Commands.Party.Commands=[[GREEN]]--Party Parancsok--
+Commands.Party.Invite.0=[[RED]]FIGYELEM: [[GREEN]]Kapt\u00e1l egy party megh\u00edv\u00f3t a  {0} party-ba. Megh\u00edv\u00f3: {1}
+Commands.Party.Rename=[[GRAY]]A party \u00faj neve: [[WHITE]]{0}
 Commands.Party.Kick=[[RED]]Kidobtak a csoportb\u00f3l {0}!
+Commands.Party.Leave=[[RED]]Elhagytad a party-t
 Commands.PowerLevel=[[DARK_RED]]POWER LEVEL: [[GREEN]]{0}
+Commands.Skill.Leaderboard=[[YELLOW]]--mcMMO [[BLUE]]{0}[[YELLOW]] Dics\u0151s\u00e9glista--
+Commands.Stats.Self=STATISZTIK\u00c1ID
+Commands.Stats=[[RED]]- mcMMO Statisztik\u00e1d
+Commands.Usage.PartyName=n\u00e9v
+Commands.Usage.Password=jelsz\u00f3
+Party.InformedOnJoin={0} [[GREEN]]csatlakozott a party-dba
+Party.InformedOnQuit={0} [[GREEN]]elment a party-db\u00f3l
+Party.Player.Invalid=[[RED]]Nincs ilyen nev\u0171 j\u00e1t\u00e9kos.
+Party.Player.InSameParty=[[RED]]{0} m\u00e1r bent van a party-dban!
+Party.PlayerNotInParty=[[DARK_RED]]{0} nincs benne a party-ba
+Party.Teleport.Dead=[[RED]]Nem teleport\u00e1lhatsz halott j\u00e1t\u00e9kosra.
+Party.Teleport.Target=[[GREEN]]{0} hozz\u00e1d teleport\u00e1lt.
 Party.Unlocked=[[GRAY]]Csoport nyitva
+Party.ShareType.Item=T\u00c1RGY
+Party.ShareMode.Random=V\u00c9LETLEN
+Party.ItemShare.Category.Mining=B\u00e1ny\u00e1sz\u00e1s
+Party.ItemShare.Category.Woodcutting=Fav\u00e1g\u00e1s
+Commands.XPGain.Acrobatics=Es\u00e9s
 Commands.XPGain.Excavation=\u00c1sni \u00e9s kincset tal\u00e1lni.
 Commands.XPGain.Herbalism=N\u00f6v\u00e9nyek betakar\u00edt\u00e1sa
 Commands.XPGain.Mining=K\u0151 \u00e9s \u00e9rcek kib\u00e1ny\u00e1sz\u00e1sa
+Commands.XPGain.Repair=Jav\u00edt\u00e1s
+Commands.XPGain.Swords=Sz\u00f6rnyek sebz\u00e9se
 Commands.XPGain.Taming=\u00c1llatok idom\u00edt\u00e1sa vagy harc a farkasoddal
 Commands.XPGain=[[DARK_GRAY]]KAPOTT TP: [[WHITE]]{0}
+Commands.xplock.unlocked=[[GOLD]]Az XP cs\u00edkod [[GREEN]]FELOLDVA[[GOLD]]!
+Commands.xprate.started.0=[[GOLD]]mcMMO XP event kezdet\u00e9t vette!
 XPRate.Event=[[GOLD]]mcMMO-ban most TP r\u00e1ta n\u00f6vel\u0151 esem\u00e9ny van! TP r\u00e1ta {0}x!
+Effects.Effects=EFFEKTEK
+Effects.Template=[[DARK_AQUA]]{0}: [[GREEN]]{1}
 Guides.Excavation=[[DARK_AQUA]]\u00c1s\u00e1sr\u00f3l:\n\n[[YELLOW]]\u00c1s\u00e1s a kincskeres\u00e9s egyik fajt\u00e1ja..\n\n[[YELLOW]]\u00c1s\u00e1s sor\u00e1n ez\u00e9rt kincseket kaphatsz.\n\n[[YELLOW]]Min\u00e9l t\u00f6bbet \u00e1sol, ann\u00e1l t\u00f6bb kincset tal\u00e1lhatsz.\n\n\n\n[[DARK_AQUA]]Tapasztalat Pont (TP) szerz\u00e9s:\n\n[[YELLOW]]Ahhoz, hogy TP-t szerezhess, \u00e1s\u00f3val a kezedben kell \u00e1snod.\n\n[[YELLOW]]Csak meghat\u00e1rozott t\u00edpus\u00fa blokkokban tal\u00e1lhatsz kincseket.\n\n[[DARK_AQUA]]Meghat\u00e1rozott blokkok:\n\n[[YELLOW]]F\u0171, f\u00f6ld, homok, agyag, s\u00f3der, gomb\u00e1s f\u00f6ld, l\u00e9lekhomok\n\n\n\n[[DARK_AQUA]]Hogyan haszn\u00e1ld a Hatalmas F\u00far\u00f3t:\n\n[[YELLOW]]Kezedben az \u00e1s\u00f3val kattints a jobb eg\u00e9r gombbak.\n\n[[YELLOW]]Ezut\u00e1n 4 m\u00e1sodperced van, hogy\n\n[[YELLOW]]elkezdj \u00e1sni egy megfelel\u0151 anyagon. Ez \n\n[[YELLOW]]aktiv\u00e1lni fogja a Hatalmas F\u00far\u00f3t.\n\n[[DARK_AQUA]]Mi az a Hatalmas F\u00far\u00f3?\n\n[[YELLOW]]Hatalmas f\u00far\u00f3 egy k\u00e9pess\u00e9g, amely az \u00c1s\u00e1s\n\n[[YELLOW]]j\u00e1rtass\u00e1godhoz k\u00f6t\u0151dik. Megh\u00e1romszorozza\n\n[[YELLOW]]a kincs es\u00e9s\u00e9nek es\u00e9ly\u00e9t \u00e9s azonnal sz\u00e9tt\u00f6ri\n\n[[YELLOW]]az \u00e1s\u00e1shoz kapcsol\u00f3d\u00f3 blokkokat.\n\n\n\n[[DARK_AQUA]]Hogyan m\u0171k\u00f6dik a kincskeres\u00e9s?\n\n[[YELLOW]]Minden kincsnek megvan a maga \n\n[[YELLOW]]szintbeli k\u00f6vetelm\u00e9nye, amely ut\u00e1n eshet, ennek k\u00f6vetkezt\u00e9ben \n\n[[YELLOW]]neh\u00e9z megmondani, hogy mennyire hasznos.\n\n[[YELLOW]]Csak tartsd \u00e9szben, hogy min\u00e9l nagyobb az \u00c1s\u00e1sbeli j\u00e1rtass\u00e1god,\n\n[[YELLOW]]ann\u00e1l t\u00f6bb kincset kaphatsz.\n\n[[YELLOW]]Ezen fel\u00fcl azt se felejtsd el, hogy minden \u00c1sat\u00e1shoz k\u00f6t\u0151d\u0151\n\n[[YELLOW]]anyagnak megvan a saj\u00e1t list\u00e1ja, arra, hogy milyen kincset tartalmazhat.\n\n[[YELLOW]]M\u00e1s szavakkal, m\u00e1s kincset tal\u00e1lhatsz egy f\u00f6ld blokkban\n\n[[YELLOW]]mint egy homok blokkban.\n\n[[DARK_AQUA]]Megjegyz\u00e9s az \u00c1s\u00e1shoz:\n\n[[YELLOW]]A kincsek teljesen szem\u00e9lyre szabhat\u00f3ak.\n\n[[YELLOW]]\u00cdgy szerverenk\u00e9nt elt\u00e9rhetnek egym\u00e1st\u00f3l.
+Guides.Page.OutOfRange=Ez a lap nem l\u00e9tezik, \u00f6sszesen {0} lap van.
+Guides.Smelting=Hamarosan...
 Skills.Disarmed=[[DARK_RED]]Lefegyvereztek!
+Skills.Stats=[[YELLOW]]{0}[[GREEN]]{1}[[DARK_AQUA]] XP([[GRAY]]{2}[[DARK_AQUA]]/[[GRAY]]{3}[[DARK_AQUA]])
+Skills.TooTired=[[RED]]T\u00fal f\u00e1radt vagy hogy haszn\u00e1ld ezt a k\u00e9pess\u00e9get. [[YELLOW]]({0}s)
 Stats.Header.Combat=[[GOLD]]-=HARCI K\u00c9PZETTS\u00c9GEK=-
 Stats.Header.Gathering=[[GOLD]]-= GY\u0170JT\u00d6GET\u0150 K\u00c9PESS\u00c9GEK=-
+Stats.Own.Stats=[[GREEN]][mcMMO] Statisztik\u00e1k
+Spout.LevelUp.1=[[GREEN]]Szintet l\u00e9pt\u00e9l!
+Spout.Menu.ExitButton=KIJ\u00c1RAT
+MOTD.Version=[[GOLD]][mcMMO] Jelenlegi verzi\u00f3: [[DARK_AQUA]]{0}
