--- a/src/main/resources/locale/locale_pt_BR.properties
+++ b/src/main/resources/locale/locale_pt_BR.properties
@@ -19,6 +19,8 @@ Axes.Effect.3=Dano Duplo
 Axes.Effect.5=Adiciona dano extra
 Axes.Listener=Machados:
 Axes.SkillName=Machado
+Axes.Skills.SS.On=[[GREEN]]**Racha Cr\u00e2nio ATIVADO**
+Axes.Skills.SS.Refresh=[[GREEN]]Sua [[YELLOW]] Racha Cr\u00e2nio [[GREEN]] habilidade est\u00e1 pronta.
 Axes.Skills.SS.Other.On=[[GREEN]]{0}[[DARK_GREEN]] usou [[RED]]Racha Cranios!
 Axes.Skillup=[[AMARELO]]Habilidade Machado aumentada em {0}. Total ({1})
 Excavation.Ability.Lower=[[GRAY]]**VOC\u00ca ABAIXA SUA P\u00c1**
@@ -35,6 +37,7 @@ Herbalism.Ability.Lower=[[GRAY]]**VOC\u00ca ABAIXA SUA ENXADA**
 Herbalism.Ability.Ready=[[GREEN]]**VOC\u00ca PREPARA SUA ENXADA**
 Herbalism.Listener=Herbalismo
 Herbalism.SkillName=HERBALISMO
+Herbalism.Skills.GTe.Refresh=[[GREEN]]Sua [[YELLOW]]pronta sua habilidade de [[GREEN]]Terra Verde
 Herbalism.Skills.GTe.Other.Off=[[RED]]Terra Verde[[GREEN]] acabou para o [[YELLOW]]{0}
 Mining.Ability.Length=[[RED]]Super Partir Duracao: [[YELLOW]]{0}s
 Mining.Ability.Lower=[[GRAY]]**VOC\u00ca ABAIXA SUA PICARETA**
@@ -70,6 +73,8 @@ Swords.Effect.6=Sangrou
 Swords.Listener=Espadas:
 Swords.SkillName=Espada
 Swords.Skills.SS.On=[[GREEN]]**ATAQUE DE SERRA ACTIVADO**
+Swords.Skills.SS.Other.Off=[[RED]]Ataque de cerra[[GREEN]] acabou para [[YELLOW]]{0}
+Swords.Skills.SS.Other.On=[[GREEN]]{0}[[DARK_GREEN]] usou [[RED]] quebra r\u00e1pida!
 Taming.Ability.Bonus.1=Lobos evitam o perigo
 Taming.Ability.Bonus.6=Garras Afiadas
 Taming.Effect.11=Redu\u00e7\u00e3o de dano explosivo
@@ -85,6 +90,7 @@ Taming.Skillup=[[YELLOW]]Habilidade Domesticar aumentada em {0}. Total ({1})
 Unarmed.Listener=Desarmado:
 Unarmed.SkillName=DESARMAR
 Unarmed.Skills.Berserk.Off=[[RED]]**Berserk acabou**
+Unarmed.Skills.Berserk.Other.Off=[[RED]]Quebra r\u00e1pida[[GREEN]] acabou para [[YELLOW]]{0}
 Unarmed.Skills.Berserk.Other.On=[[GREEN]]{0}[[DARK_GREEN]] usou [[RED]]Berserk!
 Woodcutting.Ability.0=Soprador de Folhas
 Woodcutting.Ability.1=Soprar Folhas
@@ -106,6 +112,7 @@ Combat.TargetDazed=Alvo foi [[DARK_RED]]Atordoado
 Combat.TouchedFuzzy=[[DARK_RED]]Visao turva. Sente Tonturas.
 Commands.AdminChat.Off=Chat Admin [[RED]]Desligado
 Commands.AdminChat.On=Chat de Admin [[GREEN]]Ligado
+Commands.AdminToggle=[[RED]]- Liga o Admin chat
 Commands.Disabled=[[RED]]Este comando est\u00e1 desabilitado.
 Commands.DoesNotExist=[[RED]]Player n\u00e3o existe na database!
 Commands.GodMode.Disabled=[[YELLOW]]mcMMO Modo God desabilitado
