--- a/src/main/resources/locale/locale_ja_JP.properties
+++ b/src/main/resources/locale/locale_ja_JP.properties
@@ -1,24 +1,37 @@
 Acrobatics.Combat.Proc=[[GREEN]]**\u907f\u3051\u3089\u308c\u307e\u3059**
+Acrobatics.Listener=\u30a2\u30af\u30ed\u30d0\u30c6\u30a3\u30c3\u30af:
 Acrobatics.SkillName=\u30a2\u30af\u30ed\u30d0\u30c3\u30c8
 Acrobatics.Skillup=[[YELLOW]\u30de\u30a4\u30cb\u30f3\u30b0\u304c{0}\u4e0a\u6607\u3057\u305f\u3002\u5408\u8a08\uff08{1}\uff09
+Archery.Listener=\u5f13\u77e2:
+Archery.Skillup=[[YELLOW]\u30de\u30a4\u30cb\u30f3\u30b0\u30b9\u30ad\u30eb\u304c{0}\u4e0a\u6607\u3057\u305f\u3002\u5408\u8a08\uff08{1}\uff09
+Axes.Effect.3=\u30c0\u30d6\u30eb\u30c0\u30e1\u30fc\u30b8
 Axes.Skills.SS.Other.On=[[GREEN]]{0}[[DARK_GREEN]] \u306f [[RED]]\u30b9\u30ab\u30eb\u30b9\u30d7\u30ea\u30c3\u30bf\u30fc[[DARK_GREEN]]\u3092\u4f7f\u7528\u3057\u305f\uff01
+Axes.Skillup=[[YELLOW]\u65a7\u30b9\u30ad\u30eb\u306f{0}\u306e\u5897\u52a0\u3068\u306a\u308a\u307e\u3057\u305f\u3002\u5408\u8a08\uff08{1}\uff09
 Excavation.SkillName=\u767a\u6398
+Fishing.Effect.10=\u30a2\u30a4\u30b9\u30d5\u30a3\u30c3\u30b7\u30f3\u30b0
 Herbalism.Listener=\u85ac\u8349\u5b66\uff1a
+Herbalism.Skills.GTe.Refresh=[[GREEN]]\u3042\u306a\u305f\u306e[[YELLOW]]\u30b0\u30ea\u30fc\u30f3\u30c6\u30e9[[GREEN]]\u30a2\u30d3\u30ea\u30c6\u30a3\u304c\u4f7f\u3048\u308b\u3088\u3046\u306b\u306a\u308a\u307e\u3057\u305f\uff01
 Mining.Ability.Length=[[RED]]\u30b9\u30fc\u30d1\u30fc\u30d6\u30ec\u30a4\u30ab\u30fc\u306e\u767a\u52d5\u6642\u9593: [[YELLOW]]{0}\u79d2
 Mining.Ability.Ready=[[GREEN]]**\u3042\u306a\u305f\u306f\u3001\u30d4\u30c3\u30b1\u30eb\u3092\u7528\u610f**
 Mining.Listener=\u30de\u30a4\u30cb\u30f3\u30b0:
 Mining.Skills.SuperBreaker.Refresh=[[GREEN]]\u3042\u306a\u305f\u306e[[YELLOW]]\u30b9\u30fc\u30d1\u30fc\u30d6\u30ec\u30a4\u30ab\u30fc[[GREEN]]\u30a2\u30d3\u30ea\u30c6\u30a3\u304c\u518d\u4f7f\u7528\u53ef\u80fd\u306b\u306a\u308a\u307e\u3057\u305f\uff01
 Mining.Skillup=[[YELLOW]\u30de\u30a4\u30cb\u30f3\u30b0\u30b9\u30ad\u30eb{0}\u306f\u5897\u3048\u305f\u3002\u5408\u8a08\uff08{1}\uff09
-Mining.Blast.Refresh=[[GREEN]]\u3042\u306a\u305f\u306e[[YELLOW]]\u30d6\u30e9\u30b9\u30c8\u30de\u30a4\u30cb\u30f3\u30b0[[GREEN]]\u30a2\u30d3\u30ea\u30c6\u30a3\u306f\u30ea\u30d5\u30ec\u30c3\u30b7\u30e5\u3055\u308c\u307e\u3057\u305f\uff01
+Mining.Blast.Radius.Increase=[[RED]]\u7206\u767a\u306e\u534a\u5f84\u304c\u5897\u3048\u305f[[YELLOW]]+{0}
+Mining.Blast.Refresh=[[GREEN]]\u3042\u306a\u305f\u306e[[YELLOW]]\u7206\u7834\u63a1\u6398 [[GREEN]]\u80fd\u529b\u304c\u56de\u5fa9\u3057\u307e\u3057\u305f!
+Repair.Effect.0=\u4fee\u7e55
 Repair.Effect.4=\u30b9\u30fc\u30d1\u30fc\u30ea\u30da\u30a2
 Repair.Effect.7=\u30c0\u30a4\u30e4\u30e2\u30f3\u30c9\u306e\u30c4\u30fc\u30eb & \u9632\u5177\u3092\u4fee\u7e55
 Repair.Effect.9=\u9b54\u6cd5\u306e\u30a2\u30a4\u30c6\u30e0\u3092\u4fee\u5fa9
 Repair.Listener=\u4fee\u7e55:
+Repair.SkillName=\u4fee\u7e55
 Repair.Skills.AdeptDiamond=[[DARK_RED]]\u30c0\u30a4\u30e4\u30e2\u30f3\u30c9\u30c4\u30fc\u30eb\u3092\u4fee\u5fa9\u3059\u308b\u70ba\u306e\u5341\u5206\u306a\u30b9\u30ad\u30eb\u304c\u3042\u308a\u307e\u305b\u3093\uff01
 Repair.Skills.AdeptGold=[[DARK_RED]]\u3042\u306a\u305f\u306f\u91d1\u3092\u4fee\u5fa9\u3059\u308b\u305f\u3081\u306b\u5341\u5206\u306a\u30b9\u30ad\u30eb\u3092\u6301\u3063\u3066\u3044\u306a\u3044\u3002
 Repair.Skills.AdeptStone=[[DARK_RED]]\u77f3\u30c4\u30fc\u30eb\u3092\u4fee\u5fa9\u3059\u308b\u70ba\u306e\u5341\u5206\u306a\u30b9\u30ad\u30eb\u304c\u3042\u308a\u307e\u305b\u3093\uff01
 Repair.Skillup=[[YELLOW]]\u30ea\u30da\u30a2\u304c{0}\u4e0a\u6607\u3057\u305f\u3002\u5408\u8a08({1})
+Repair.Pretty.Name=\u4fee\u7406
+Salvage.Pretty.Name=\u30b5\u30eb\u30d9\u30fc\u30b8
 Repair.Arcane.Fail=[[RED]]\u79d8\u5100\u30d1\u30ef\u30fc\u304c\u6c38\u4e45\u30a2\u30a4\u30c6\u30e0\u3092\u6b8b\u3057\u3066\u3044\u308b\u3002
+Swords.Ability.Lower=[[GRAY]]**\u5263\u3092\u4e0b\u3052\u305f**
 Swords.Combat.Bleeding.Stopped=[[GRAY]]\u51fa\u8840\u306f [[GREEN]]\u6b62\u307e\u308a\u307e\u3057\u305f[[GRAY]]!
 Swords.Combat.Bleeding=[[GREEN]]**\u6575\u304c\u51fa\u8840**
 Swords.Combat.Countered=[[GREEN]]**\u30ab\u30a6\u30f3\u30bf\u30fc\u30a2\u30bf\u30c3\u30af\uff01**
@@ -29,26 +42,43 @@ Unarmed.Listener=\u7d20\u624b:
 Unarmed.Skills.Berserk.Off=[[RED]]**\u30d0\u30fc\u30b5\u30fc\u30af\u304c\u30aa\u30d5\u306b\u306a\u308a\u307e\u3057\u305f**
 Woodcutting.Ability.0=\u30ea\u30fc\u30d5\u30d6\u30ed\u30ef\u30fc
 Woodcutting.Ability.1=\u8449\u3063\u3071\u3092\u5439\u304d\u98db\u3070\u3059
+Woodcutting.Listener=\u6728\u3053\u308a:
 Woodcutting.SkillName=\u304d\u3053\u308a
+Woodcutting.Skills.TreeFeller.Refresh=[[GREEN]]\u3042\u306a\u305f\u306e[[YELLOW]]\u30c4\u30ea\u30fc\u30d5\u30a3\u30e9\u30fc[[GREEN]]\u30a2\u30d3\u30ea\u30c6\u30a3\u304c\u4f7f\u3048\u308b\u3088\u3046\u306b\u306a\u308a\u307e\u3057\u305f\uff01
 Woodcutting.Skills.TreeFeller.Other.Off=[[RED]]\u304d\u3053\u308a[[GREEN]]\u30b9\u30ad\u30eb\u306f\u3042\u3068[[YELLOW]]{0}\u79d2\u9593[[GREEN]]\u4f7f\u3048\u307e\u305b\u3093\u3002
+Woodcutting.Skills.TreeFeller.Splinter=[[RED]]\u3042\u306a\u305f\u306e\u65a7\u306f\u5341\u6570\u500b\u306e\u7834\u7247\u306b\u306a\u3063\u305f\uff01
+Ability.Generic.Template.Lock=[[GRAY]]{0}
 Ability.Generic.Template=[[RED]]{0}: [[YELLOW]]{1}
 Combat.TouchedFuzzy=[[DARK_RED]]\u3042\u3044\u307e\u3044\u306a\u611f\u3058\u304c\u3057\u307e\u3057\u305f\u3002\u30d5\u30a7\u30eb\u30c8\u30fb\u30c7\u30a3\u30b8\u30fc\u3002
 Commands.AdminChat.Off=\u7ba1\u7406\u8005\u5c02\u7528\u30c1\u30e3\u30c3\u30c8\u306f[[RED]]off[[WHITE]]\u3067\u3059\u3002
+Commands.AdminToggle=[[RED]]- \u7ba1\u7406\u8005\u30c1\u30e3\u30c3\u30c8\u306b\u5207\u308a\u66ff\u3048
+Commands.Disabled=[[RED]]\u3053\u306e\u30b3\u30de\u30f3\u30c9\u306f\u7121\u52b9\u5316\u3055\u308c\u3066\u3044\u307e\u3059\u3002
 Commands.DoesNotExist=[[RED]]\u305d\u306e\u30d7\u30ec\u30fc\u30e4\u30fc\u306e\u30c7\u30fc\u30bf\u30d9\u30fc\u30b9\u304c\u5b58\u5728\u3057\u307e\u305b\u3093\u3002
+Commands.Invite.Accepted=[[GREEN]]\u62db\u5f85\u304c\u627f\u8a8d\u3055\u308c\u307e\u3057\u305f\u3002\u30d1\u30fc\u30c6\u30a3\u30fc {0} \u306b\u53c2\u52a0\u3057\u307e\u3057\u305f\u3002
+Commands.mcgod=[[RED]]- GodMode\u306e\u5207\u308a\u66ff\u3048
 Commands.mmoedit=[player] <skill> <newvalue> [[RED]] - \u30bf\u30fc\u30b2\u30c3\u30c8\u3092\u5909\u66f4\u3057\u307e\u3059
 Commands.Party.Kick=[[RED]]\u3042\u306a\u305f\u306f\u3001\u30d1\u30fc\u30c6\u30a3\u30fc{0}\u304b\u3089\u8ffd\u3044\u51fa\u3055\u308c\u307e\u3057\u305f
+Commands.Party.Leave=[[RED]]\u30d1\u30fc\u30c6\u30a3\u30fc\u304b\u3089\u8131\u9000\u3057\u307e\u3057\u305f\u3002
 Commands.PowerLevel=[[DARK_RED]]\u30d1\u30ef\u30fc\u30ec\u30d9\u30eb:[[GREEN]]{0}
 Commands.Usage.PartyName=\u540d\u524d
+Commands.Usage.Password=\u30d1\u30b9\u30ef\u30fc\u30c9
 Party.Player.Invalid=[[RED]]\u6709\u52b9\u306a\u30d7\u30ec\u30fc\u30e4\u30fc\u3067\u306f\u3042\u308a\u307e\u305b\u3093\u3002
+Party.Teleport.Dead=[[RED]]\u6b7b\u3093\u3060\u30d7\u30ec\u30a4\u30e4\u30fc\u306e\u5834\u6240\u306b\u30c6\u30ec\u30dd\u30fc\u30c8\u3059\u308b\u3053\u3068\u306f\u3067\u304d\u307e\u305b\u3093\u3002
+Party.Teleport.Target=[[GREEN]]{0} \u306f\u3042\u306a\u305f\u306e\u5834\u6240\u306b\u30c6\u30ec\u30dd\u30fc\u30c8\u3057\u307e\u3057\u305f\u3002
 Party.Unlocked=[[GRAY]]\u30d1\u30fc\u30c6\u30a3\u30fc\u306e\u30ed\u30c3\u30af\u304c\u89e3\u9664\u3055\u308c\u305f
+Party.ItemShare.Category.Mining=\u9271\u696d
+Party.ItemShare.Category.Woodcutting=\u4f10\u63a1
 Commands.XPGain.Excavation=\u6398\u524a\u3057\u3066\u5b9d\u7269\u3092\u898b\u3064\u3051\u3088\u3046
 Commands.XPGain.Herbalism=\u85ac\u8349\u306e\u53ce\u7a6b
 Commands.XPGain.Mining=\u9271\u696d\u77f3\u3068\u9271\u77f3
 Commands.XPGain.Taming=\u52d5\u7269\u3092\u98fc\u3044\u6163\u3089\u3059\u3001\u307e\u305f\u306f\u6226\u95d8\u3092\u3059\u308b/\u3042\u306a\u305f\u306e\u72fc
 Commands.XPGain=[[DARK_GRAY]]\u7d4c\u9a13\u5024\u3092\u624b\u306b\u5165\u308c\u305f: [[WHITE]]{0}
+XPRate.Event=[[GOLD]]mcMMO\u306f\u4ecaEX\u30ec\u30fc\u30c8\u30a4\u30d9\u30f3\u30c8\u3092\u958b\u50ac\u4e2d\uff01EX\u306e\u30ec\u30fc\u30c8\u306f {0}\u500d\u3067\u3059\uff01
 Effects.Effects=\u52b9\u679c
+Effects.Template=[[DARK_AQUA]]{0}: [[GREEN]]{1}
 Guides.Excavation=[[DARK_AQUA]]\u63a1\u6398\u306b\u3064\u3044\u3066:\n[[YELLOW]]\u767a\u6398\u306f\u3001\u5b9d\u7269\u3092\u898b\u3064\u3051\u308b\u3053\u3068\u304c\u3067\u304d\u308b\u884c\u70ba\u3067\u3042\u308b\u3002\n[[YELLOW]]\u3042\u306a\u305f\u306f\u571f\u5730\u3092\u6398\u308b\u3053\u3068\u306b\u3088\u308a\u5b9d\u7269\u3092\u898b\u3064\u3051\u3089\u308c\u308b\u3002\n[[YELLOW]]\u3088\u308a\u591a\u304f\u5b9d\u7269\u3092\u898b\u3064\u3051\u308b\u3053\u3068\u304c\u3067\u304d\u308b\u3002\n\n[[DARK_AQUA]]\u7d4c\u9a13\u5024\u3092\u7372\u5f97:\n[[YELLOW]]\u3042\u306a\u305f\u304c\u30b7\u30e3\u30d9\u30eb\u3092\u6301\u3061\u3001\u6398\u308b\u3053\u3068\u3067\u3053\u306e\u30b9\u30ad\u30eb\u306e\u7d4c\u9a13\u5024\u3092\u7372\u5f97\u3059\u308b\u3002\n[[YELLOW]]\u7279\u5b9a\u306e\u7269\u3092\u6398\u308b\u3053\u3068\u3067\u5b9d\u7269\u304a\u3088\u3073\u7d4c\u9a13\u5024\u3092\u7372\u5f97\u3059\u308b\u3053\u3068\u304c\u3067\u304d\u308b\u3002\n[[DARK_AQUA]]\u5bfe\u5fdc\u3057\u3066\u3044\u308b\u7269:\n[[YELLOW]]\u8349\u30d6\u30ed\u30c3\u30af\u3001\u571f\u3001\u7802\u3001\u7c98\u571f\u3001\u7802\u5229\u3001\u83cc\u7cf8\u3001\u30bd\u30a6\u30eb\u30b5\u30f3\u30c9\n\n[[DARK_AQUA]]\u30ae\u30ac\u30c9\u30ea\u30eb\u30d6\u30ec\u30a4\u30ab\u30fc\u306e\u4f7f\u3044\u65b9:\n[[YELLOW]]\u30b7\u30e3\u30d9\u30eb\u3092\u6301\u3061\u3001\u53f3\u30af\u30ea\u30c3\u30af\u3059\u308b\u3053\u3068\u3067\u6e96\u5099\u3067\u304d\u308b\u3002\n[[YELLOW]]\u3053\u306e\u72b6\u614b\u306f\u30014\u79d2\u9593\u30ad\u30fc\u30d7\u3055\u308c\u308b\u3002\n[[YELLOW]]\u5bfe\u5fdc\u3057\u3066\u3044\u308b\u7269\u3092\u6398\u308d\u3046\u3068\u3059\u308b\u3068\n[[YELLOW]]\u30ae\u30ac\u30c9\u30ea\u30eb\u30d6\u30ec\u30a4\u30ab\u30fc\u304c\u767a\u52d5\u3057\u307e\u3059\u3002\n[[DARK_AQUA]]\u30ae\u30ac\u30c9\u30ea\u30eb\u30d6\u30ec\u30a4\u30ab\u30fc\u3068\u306f\u306a\u3093\u3067\u3059\u304b?\n[[YELLOW]]\u30ae\u30ac\u30c9\u30ea\u30eb\u30d6\u30ec\u30a4\u30ab\u30fc\u3068\u306f\u80fd\u529b\u3067\u3042\u308b\u3002\n[[YELLOW]]\u63a1\u6398\u30b9\u30ad\u30eb\u3002\u4e09\u56de\u306e\u30c1\u30e3\u30f3\u30b9\u304c\u3042\u308b\n[[YELLOW]]\u5b9d\u7269\u3092\u898b\u3064\u3051\u308b\u3068\u30a4\u30f3\u30b9\u30bf\u30f3\u30c8\u30d6\u30ec\u30fc\u30af\u304c\u53ef\u80fd\n[[YELLOW]]\u5bfe\u5fdc\u3057\u3066\u3044\u308b\u7269\u306b\u9650\u308b\u3002\n\n[[DARK_AQUA]]\u30c8\u30ec\u30b8\u30e3\u30fc\u30cf\u30f3\u30bf\u30fc\u306f\u3069\u306e\u3088\u3046\u306b\u52d5\u4f5c\u3057\u307e\u3059\u304b?\n[[YELLOW]]Every possible treasure for Excavation has its own\n[[YELLOW]]skill level requirement for it to drop, as a result it\'s\n[[YELLOW]]difficult to say how much it is helping you.\n[[YELLOW]]\u3042\u306a\u305f\u306e\u63a1\u6398\u30b9\u30ad\u30eb\u304c\u9ad8\u3051\u308c\u3070\u9ad8\u3044\u307b\u3069\n[[YELLOW]]\u3088\u308a\u591a\u304f\u306e\u5b9d\u3092\u898b\u3064\u3051\u308b\u3053\u3068\u304c\u3067\u304d\u307e\u3059\u3002\n[[YELLOW]]And also keep in mind that each type of Excavation\n[[YELLOW]]compatible material has its own unique list of treasures.\n[[YELLOW]]In other words you will find different treasures in Dirt\n[[YELLOW]]than you would in Gravel.\n[[DARK_AQUA]]Notes about Excavation:\n[[YELLOW]]Excavation drops are completely customizeable\n[[YELLOW]]So results vary server to server.
 Item.ChimaeraWing.Pass=**\u30ad\u30de\u30a4\u30e9\u306e\u7ffc**
+Item.ChimaeraWing.Name=\u30ad\u30e1\u30e9\u306e\u7fbd
 Skills.Disarmed=[[DARK_RED]]\u3042\u306a\u305f\u306f\u65e2\u306b\u6b66\u88c5\u89e3\u9664\u3057\u3066\u3044\u307e\u3059!
 Stats.Header.Combat=[[GOLD]]\u6226\u95d8\u306e\u6280\u8853
 Stats.Header.Gathering=[[GOLD]]-=\u53ce\u96c6\u30b9\u30ad\u30eb=-
