--- a/src/main/resources/locale/locale_zh_CN.properties
+++ b/src/main/resources/locale/locale_zh_CN.properties
@@ -75,8 +75,10 @@ Excavation.Skillup=[[YELLOW]]\u6316\u6398\u6280\u80fd\u63d0\u5347 {0}. \u603b\u5
 Fishing.Ability.Chance=[[RED]]\u6495\u54ac\u51e0\u7387: [[YELLOW]]{0}
 Fishing.Ability.Info=[[RED]]\u9b54\u6cd5\u730e\u4eba: [[GRAY]] ** \u968f\u7740\u5b9d\u85cf\u730e\u4eba\u7b49\u7ea7\u63d0\u9ad8  **
 Fishing.Ability.Locked.0=\u9501\u5b9a\u72b6\u6001\uff0c\u76f4\u5230 {0}+ \u6280\u80fd\uff08\u6447\uff09
+Fishing.Ability.Locked.1={0}+ \u7ea7\u540e\u89e3\u9501 (\u51b0\u6e14)
 Fishing.Ability.Rank=[[RED]]\u5b9d\u7269\u730e\u4eba\u7b49\u7ea7: [[YELLOW]]{0}/5
 Fishing.Ability.Shake=[[RED]]\u9c7c\u94a9\u7a83\u53d6\u51e0\u7387: [[YELLOW]]{0}
+Fishing.Ability.IceFishing=[[RED]]\u51b0\u6e14: \u5728\u51b0\u51b7\u7684\u73af\u5883\u91cc\u9493\u9c7c
 Fishing.Ability.FD=[[RED]]\u6e14\u6c11\u7684\u98df\u8c31: [[YELLOW]]\u6392\u540d {0}
 Fishing.Effect.0=\u5b9d\u7269\u730e\u4eba (\u88ab\u52a8\u6280\u80fd)
 Fishing.Effect.1=\u9493\u5230\u6742\u7269
@@ -88,6 +90,8 @@ Fishing.Effect.6=\u6e14\u592b\u98df\u8c31
 Fishing.Effect.7=\u63d0\u9ad8\u9c7c\u7c7b\u98df\u7269\u6062\u590d\u7684\u9965\u997f\u503c
 Fishing.Effect.8=\u9493\u9c7c\u5927\u5e08
 Fishing.Effect.9=\u63d0\u9ad8\u9493\u9c7c\u54ac\u94a9\u51e0\u7387
+Fishing.Effect.10=\u51b0\u6e14
+Fishing.Effect.11=\u5141\u8bb8\u4f60\u5728\u51b0\u51b7\u7684\u73af\u5883\u4e0b\u9493\u9c7c
 Fishing.Enchant.Chance=[[RED]]\u9b54\u6cd5\u730e\u4eba\u51e0\u7387: [[YELLOW]]{0}
 Fishing.Chance.Raining=[[BLUE]] \u5927\u91cf\u5956\u52b1
 Fishing.ItemFound=[[GRAY]]\u53d1\u73b0\u5b9d\u7269\u4e86\uff01
@@ -202,6 +206,8 @@ Repair.Skills.Mastery=[[RED]]\u4fee\u7406\u7cbe\u901a: [[YELLOW]]\u989d\u5916\u5
 Repair.Skills.StackedItems=[[DARK_RED]]\u4f60\u65e0\u6cd5\u4fee\u7406\u5df2\u53e0\u52a0\u7684\u7269\u54c1.
 Repair.Skills.Super.Chance=[[RED]]\u8d85\u7ea7\u4fee\u7406\u51e0\u7387: [[YELLOW]]{0}
 Repair.Skillup=[[YELLOW]]\u4fee\u7406\u6280\u80fd\u4e0a\u5347\u4e86 {0}. \u603b\u5171 ({1})
+Repair.Pretty.Name=\u4fee\u7406
+Salvage.Pretty.Name=\u5206\u89e3
 Repair.Arcane.Chance.Downgrade=[[GRAY]]\u9644\u9b54\u964d\u7ea7\u51e0\u7387: [[YELLOW]]{0}%
 Repair.Arcane.Chance.Success=[[GRAY]]\u795e\u79d8\u953b\u9020\u6210\u529f\u7387: [[YELLOW]]{0}%
 Repair.Arcane.Downgrade=[[RED]]\u8fd9\u4ef6\u7269\u54c1\u7684\u9644\u9b54\u7b49\u7ea7\u5df2\u4e0b\u964d.
@@ -284,6 +290,7 @@ Taming.Skillup=[[YELLOW]]\u9a6f\u517d\u6280\u80fd\u4e0a\u5347\u4e86 {0}. \u603b\
 Taming.Summon.Complete=[[GREEN]]\u53ec\u5524\u5b8c\u6bd5
 Taming.Summon.Fail.Ocelot=[[RED]]\u4f60\u4e0d\u80fd\u53ec\u5524\u8c79\u732b\u56e0\u4e3a\u4f60\u53ec\u5524\u4e86\u592a\u591a\u4e86.
 Taming.Summon.Fail.Wolf=[[RED]]\u4f60\u8eab\u8fb9\u5df2\u7ecf\u62e5\u6709\u8db3\u591f\u591a\u7684\u72fc,\u65e0\u6cd5\u53ec\u5524\u66f4\u591a.
+Taming.Summon.Name.Format={0}\u7684 {1}
 Unarmed.Ability.Berserk.Length=[[RED]]\u72c2\u66b4\u6301\u7eed\u65f6\u95f4: [[YELLOW]]{0}s
 Unarmed.Ability.Bonus.0=\u94c1\u8155\u6a21\u5f0f
 Unarmed.Ability.Bonus.1=\u589e\u52a0{0}\u70b9\u4f24\u5bb3
@@ -383,8 +390,6 @@ Commands.mmoedit=[player] <skill> <newvalue> [[RED]] - \u7f16\u8f91\u76ee\u6807
 Commands.mmoedit.AllSkills.1=[[GREEN]]\u4f60\u7684\u6240\u6709\u6280\u80fd\u7b49\u7ea7\u8bbe\u7f6e\u4e3a {0}!
 Commands.mmoedit.Modified.1=[[GREEN]]\u4f60\u7684\u7b49\u7ea7 {0} \u88ab\u8bbe\u7f6e\u4e3a {1}!
 Commands.mmoedit.Modified.2=[[RED]]{0} \u5df2\u66f4\u6539\u4e3a {1}.
-Commands.mmoupdate.Start=[[GRAY]]\u5f00\u59cb\u8f6c\u6362...
-Commands.mmoupdate.Finish=[[GREEN]]\u8f6c\u6362\u5b8c\u6bd5!
 Commands.ModDescription=[[RED]]- \u8bf7\u9605\u8bfb\u7b80\u8981\u63d2\u4ef6\u63cf\u8ff0
 Commands.NoConsole=\u8fd9\u4e2a\u6307\u4ee4\u4e0d\u652f\u6301\u5728\u63a7\u5236\u53f0\u4f7f\u7528.
 Commands.Notifications.Off=\u6280\u80fd\u63d0\u793a [[RED]]\u5173\u95ed
@@ -438,7 +443,7 @@ Commands.Reset.Single=[[GREEN]]\u60a8\u7684 {0} \u6280\u672f\u6c34\u5e73\u5df2\u
 Commands.Reset=[[RED]]\u91cd\u7f6e\u6280\u80fd\u7b49\u7ea7\u4e3a0
 Commands.Skill.Invalid=[[RED]]\u8fd9\u4e0d\u662f\u4e00\u4e2a\u6709\u6548\u7684\u6280\u80fd\u540d\u5b57!
 Commands.Skill.Leaderboard=[[YELLOW]]--mcMMO [[BLUE]]{0}[[YELLOW]] \u6392\u884c\u699c--
-Commands.SkillInfo=/<skill> [[RED]]- \u67e5\u770b\u6280\u80fd\u7684\u8be6\u7ec6\u4fe1\u606f
+Commands.SkillInfo=[[RED]]- \u67e5\u770b\u6280\u80fd\u7684\u8be6\u7ec6\u4fe1\u606f
 Commands.Stats.Self=\u4f60\u7684\u4fe1\u606f
 Commands.Stats=[[RED]]- \u67e5\u770b\u4f60\u7684mcMMO\u7edf\u8ba1\u4fe1\u606f
 Commands.ToggleAbility=[[RED]]- \u7528\u9f20\u6807\u53f3\u952e\u5207\u6362\u6280\u80fd\u6fc0\u6d3b\u6a21\u5f0f
@@ -468,6 +473,8 @@ Party.Help.5=[[RED]]\u8bbe\u7f6e\u961f\u4f0d\u5bc6\u7801, \u4f7f\u7528 [[DARK_AQ
 Party.Help.6=[[RED]]\u4ece\u4f60\u7684\u961f\u4f0d\u4e2d\u8e22\u51fa\u73a9\u5bb6, \u4f7f\u7528 [[DARK_AQUA]]{0} <player>
 Party.Help.7=[[RED]]\u79fb\u4ea4\u961f\u957f, \u4f7f\u7528 [[DARK_AQUA]]{0} <player>
 Party.Help.8=[[RED]]\u89e3\u6563\u961f\u4f0d, \u4f7f\u7528 [[DARK_AQUA]]{0}
+Party.Help.9=[[RED]]\u4f7f\u7528 [[DARK_AQUA]]{0} [[RED]]\u6765\u4e0e\u4f60\u7684\u961f\u4f0d\u6210\u5458\u5206\u4eab\u7269\u54c1
+Party.Help.10=[[RED]]\u4f7f\u7528 [[DARK_AQUA]]{0} [[RED]]\u5f00\u542f\u4e0e\u4f60\u7684\u961f\u4f0d\u6210\u5458\u5206\u4eab\u7ecf\u9a8c
 Party.InformedOnJoin={0} [[GREEN]]\u5df2\u7ecf\u52a0\u5165\u4f60\u7684\u961f\u4f0d
 Party.InformedOnQuit={0} [[GREEN]]\u79bb\u5f00\u4e86\u961f\u4f0d
 Party.InformedOnNameChange=[[GOLD]]{0} [[GREEN]]\u5df2\u8bbe\u7f6e\u961f\u4f0d\u540d\u4e3a [[WHITE]]{1}
@@ -509,6 +516,11 @@ Party.ShareMode.Equal=\u5747\u5206
 Party.ShareMode.Random=\u968f\u673a
 Party.ExpShare.Disabled=[[RED]]\u961f\u4f0d\u7ecf\u9a8c\u5171\u4eab\u5df2\u7981\u7528
 Party.ItemShare.Disabled=[[RED]]\u961f\u4f0d\u7269\u54c1\u5206\u914d\u5df2\u5173\u95ed
+Party.ItemShare.Category.Loot=\u63a0\u593a
+Party.ItemShare.Category.Mining=\u6316\u77ff
+Party.ItemShare.Category.Herbalism=\u8349\u836f\u5b66
+Party.ItemShare.Category.Woodcutting=\u4f10\u6728
+Party.ItemShare.Category.Misc=\u6742\u9879
 Commands.XPGain.Acrobatics=\u6389\u843d
 Commands.XPGain.Archery=\u7a7a\u624b\u653b\u51fb\u602a\u7269
 Commands.XPGain.Axes=\u653b\u51fb\u602a\u7269
@@ -562,14 +574,21 @@ Inspect.Stats=[[YELLOW]]{0} \u7684 [[GREEN]]mcMMO \u7edf\u8ba1\u4fe1\u606f
 Inspect.TooFar=[[RED]]\u4f60\u65e0\u6cd5\u68c0\u67e5\u90a3\u4e2a\u73a9\u5bb6\u56e0\u4e3a\u4f60\u4eec\u8ddd\u79bb\u592a\u8fdc\u4e86!
 Item.ChimaeraWing.Fail=**\u5947\u7f8e\u62c9\u4e4b\u7ffc\u5931\u8d25\u4e86!**
 Item.ChimaeraWing.Pass=**\u5947\u7f8e\u62c9\u4e4b\u7ffc**
+Item.ChimaeraWing.Name=\u5947\u7f8e\u62c9\u4e4b\u7ffc
+Item.ChimaeraWing.Lore=[[GRAY]]\u4f20\u9001\u81f3\u4f60\u7684\u5e8a.
+Item.Generic.Wait=[[RED]]\u4f60\u9700\u8981\u7b49\u5f85\u4e00\u6bb5\u65f6\u95f4\u624d\u80fd\u518d\u6b21\u4f7f\u7528! [[YELLOW]]({0}s)
 Item.Injured.Wait=\u4f60\u6700\u8fd1\u53d7\u4f24\u4e86\u6240\u4ee5\u4f60\u5fc5\u987b\u7b49\u4e00\u6bb5\u65f6\u95f4\u624d\u80fd\u4f7f\u7528\u8fd9\u4e2a. [[YELLOW]]({0}s)
+Teleport.Commencing=[[GRAY]]\u4f20\u9001\u5c06\u5728 [[GOLD]]({0}) [[GRAY]] \u79d2\u540e\u8fdb\u884c, \u8bf7\u4fdd\u6301\u7ad9\u7acb\u4e0d\u52a8...
+Teleport.Cancelled=[[DARK_RED]]\u4f20\u9001\u5df2\u53d6\u6d88!
 Skills.Child=[[GOLD]](\u5206\u652f\u6280\u80fd)
 Skills.Disarmed=[[DARK_RED]]\u4f60\u88ab\u7f34\u68b0\u4e86!
 Skills.Header=[[RED]]-----[][[GREEN]]{0}[[RED]][]-----
 Skills.NeedMore=[[DARK_RED]]\u4f60\u9700\u8981\u66f4\u591a
 Skills.Parents=\u4e3b\u6280\u80fd
 Skills.Stats=[[YELLOW]]{0}[[GREEN]]{1}[[DARK_AQUA]] XP([[GRAY]]{2}[[DARK_AQUA]]/[[GRAY]]{3}[[DARK_AQUA]])
-Skills.TooTired=[[RED]]\u4f60\u73b0\u5728\u592a\u7d2f\u4e86\u6240\u4ee5\u4f60\u65e0\u6cd5\u4f7f\u7528\u8fd9\u4e2a\u6280\u80fd.
+Skills.TooTired=[[RED]]\u4f60\u592a\u7d2f\u4e86\u6682\u65f6\u65e0\u6cd5\u4f7f\u7528\u8be5\u6280\u80fd.[[YELLOW]]({0}s)
+Skills.Cancelled=[[RED]]{0} \u5df2\u53d6\u6d88!
+Skills.ConfirmOrCancel=[[GREEN]]\u518d\u6b21\u53f3\u952e\u4ee5\u786e\u5b9a [[GOLD]]{0}[[GREEN]]. \u5de6\u952e\u53d6\u6d88.
 Stats.Header.Combat=[[GOLD]]-=\u683c\u6597\u6280\u80fd=-
 Stats.Header.Gathering=[[GOLD]]-=\u91c7\u96c6\u6280\u80fd=-
 Stats.Header.Misc=[[GOLD]]-=\u6742\u9879\u6280\u80fd=-
@@ -647,7 +666,6 @@ Commands.Description.mcremove=\u4ecemcMMO\u6570\u636e\u5e93\u4e2d\u79fb\u9664\u4
 Commands.Description.mcstats=\u663e\u793a\u4f60\u7684 mcMMO \u7b49\u7ea7\u548c\u7ecf\u9a8c
 Commands.Description.mctop=\u663e\u793a mcMMO\u6392\u884c\u699c
 Commands.Description.mmoedit=\u7ed9\u73a9\u5bb6\u8bbe\u7f6e mcMMO\u7b49\u7ea7
-Commands.Description.mmoupdate=\u8f6c\u6362mcMMO\u6570\u636e, \u5c06 Flatfile \u8f6c\u6362\u4e3a MySQL
 Commands.Description.party=\u63a7\u5236\u5404\u79cd mcMMO \u961f\u4f0d\u8bbe\u7f6e
 Commands.Description.partychat=\u5207\u6362mcMMO\u961f\u4f0d\u804a\u5929\u6216\u53d1\u9001\u961f\u4f0d\u804a\u5929\u6d88\u606f
 Commands.Description.ptp=\u4f20\u9001\u81f3mcMMO\u961f\u4f0d\u6210\u5458
