Add missing Axes locale string
 * Somehow, the message notifying a player that he was struck by Skull
Splitter wasn't in the locale files anymore.
 * Re-added this string and renamed it.
 * Fixes #1271

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -9,6 +9,7 @@ Key:
 
 Version 1.4.07-dev
  + Added snow to excavation
+ = Fixed bug with Skull Splitter not finding the locale string
  ! Improved profile saving
  ! Updated localization files
 
