--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -60,6 +60,7 @@ Axes.Combat.CritChance=[[RED]]Chance to critically strike: [[YELLOW]]{0}
 Axes.Combat.CriticalHit=[[RED]]CRITICAL HIT!
 Axes.Combat.GI.Proc=[[GREEN]]**STRUCK WITH GREAT FORCE**
 Axes.Combat.GI.Struck=[[RED]]**HIT BY GREATER IMPACT**
+Axes.Combat.SS.Struck=[[DARK_RED]]Struck by SKULL SPLITTER!
 Axes.Combat.SS.Length=[[RED]]Skull Splitter Length: [[YELLOW]]{0}s
 Axes.Effect.0=Skull Splitter (Ability)
 Axes.Effect.1=Deal AoE Damage
