--- a/Changelog.txt
+++ b/Changelog.txt
@@ -10,6 +10,7 @@ Key:
 Version 1.4.07-dev
  + Added snow to excavation
  = Fixed bug with Skull Splitter not finding the locale string
+ = Fixed issue where locale strings could cause the scoreboard header to be longer than 16 characters.
  ! Improved profile saving
  ! Updated localization files
 
