--- a/Changelog.txt
+++ b/Changelog.txt
@@ -9,6 +9,7 @@ Key:
 
 Version 1.4.07-dev
  + Added snow to excavation
+ + Added new experience curve option. Cumulative curve, calculates experience needed for next level using power level.
  = Fixed bug with Skull Splitter not finding the locale string
  = Fixed issue where locale strings could cause the scoreboard header to be longer than 16 characters.
  ! Improved profile saving
