--- a/Changelog.txt
+++ b/Changelog.txt
@@ -24,6 +24,7 @@ Version 1.4.07-dev
  = Fixed a bug where the Dodge DamageModifier wasn't being read from advanced.yml
  ! Changed the way Repair hands out XP, also added config options to control Repair XP
  ! Admin and Party chat prefixes are now customizable
+ ! Changed the color of party leader names in Party chat
  ! Improved profile saving
  ! Updated localization files
  ! Party item share category states are now saved when the server shuts down.
