--- a/Changelog.txt
+++ b/Changelog.txt
@@ -26,6 +26,7 @@ Version 1.4.07-dev
  ! Admin and Party chat prefixes are now customizable
  ! Changed the color of party leader names in Party chat
  ! Improved profile saving
+ ! Improved partial name matcher
  ! Slightly improved update checker feedback
  ! Updated localization files
  ! Party item share category states are now saved when the server shuts down.
