--- a/Changelog.txt
+++ b/Changelog.txt
@@ -23,6 +23,7 @@ Version 1.4.07-dev
  = Fixed a bug where teleport location was never reset if warmup was set to 0 for Chimaera Wing.
  = Fixed a bug where the Dodge DamageModifier wasn't being read from advanced.yml
  ! Changed the way Repair hands out XP, also added config options to control Repair XP
+ ! Changed Swords "Counter Attack" ability from passive to active. Blocking is required to activate.
  ! Admin and Party chat prefixes are now customizable
  ! Changed the color of party leader names in Party chat
  ! Improved profile saving
