Hardcore mode can now be toggled for each skill individually

--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -693,11 +693,11 @@ Vampirism.Killer.Failure=[[GOLD]][mcMMO] [[YELLOW]]{0}[[GRAY]] was too unskilled
 Vampirism.Killer.Success=[[GOLD]][mcMMO] [[DARK_AQUA]]You have stolen [[BLUE]]{0}[[DARK_AQUA]] levels from [[YELLOW]]{1}.
 Vampirism.Victim.Failure=[[GOLD]][mcMMO] [[YELLOW]]{0}[[GRAY]] was unable to steal knowledge from you!
 Vampirism.Victim.Success=[[GOLD]][mcMMO] [[YELLOW]]{0}[[DARK_RED]] has stolen [[BLUE]]{1}[[DARK_RED]] levels from you!
-Hardcore.Disabled=[[GOLD]][mcMMO] Hardcore mode disabled.
-Hardcore.Enabled=[[GOLD]][mcMMO] Hardcore mode enabled.
+Hardcore.Disabled=[[GOLD]][mcMMO] Hardcore mode disabled. {0}
+Hardcore.Enabled=[[GOLD]][mcMMO] Hardcore mode enabled. {0}
 Hardcore.PercentageChanged=[[GOLD]][mcMMO] The stat loss percentage was changed to {0}.
-Vampirism.Disabled=[[GOLD]][mcMMO] Vampirism mode disabled.
-Vampirism.Enabled=[[GOLD]][mcMMO] Vampirism mode enabled.
+Vampirism.Disabled=[[GOLD]][mcMMO] Vampirism mode disabled. {0}
+Vampirism.Enabled=[[GOLD]][mcMMO] Vampirism mode enabled. {0}
 Vampirism.PercentageChanged=[[GOLD]][mcMMO] The stat leech percentage was changed to {0}.
 
 #SPOUT
